src/styling/Profile.css
/**************************** STYLING FOR OVERALL PROFILE PAGE ***********************************/
.prof-background { 
  background-size: cover; 
  background-color: #2c2c2c;
  padding-bottom: 50px;
  color: white;  
}
.prof-container-middle-section, .prof-container-profile{ 
  justify-content: center;
  display: flex;
}

.prof-container-middle-section{ 
  flex-wrap: column;
}


.prof-interest-content, .prof-picks-content , .prof-radar-list-content, .prof-about-content, .prof-acs-content { 
  border-radius: 8px;
  padding: 12px;
}
/******************************STYLES FOR FEATURE POSITIONING **********************************/
.prof-left-content{
  order: 1; 
  padding: 0% 1%; 
}

.prof-right-content {
  order: 2;
}
.prof-bottom-right-content {
  display: flex; 
}

/**************************** STYLING FOR PROFILE  ***********************************/
.prof-profile-preview{
  display: flex;
}
.prof-profile-photo {
  height: 230px;
  width: 230px;
  display: block;
  background-image: url('../res/ACSBorder.png');
  background-size: contain;
}

.prof-profile-user-given-photo {
  margin-left: 35px;
  margin-top: 43px;

  display: block;
  height: 140px;
  width: 140px;
  border-radius: 50%;

  text-indent: -10000px; /* A hack to hide the broken image icon */ 
  background-image: url('../res/account-circle.svg');
  background-size: contain;
}
.prof-profile-user-score{ 
  margin-top: -85px ; 
  margin-left: 200px;
  position: absolute;
}
.prof-profile-info {
  padding-left: 50px; 

}

.prof-profile-info h1 {
  color:  #61b305;
}
.prof-edit-profile {
  
  align-self: flex-end ; 
  margin-left: 600px;
  margin-bottom: 10px; 

}

.prof-edit-profile button, .prof-create-post-button{
  padding: 10px 20px; 
  color: white; 
  background-color: #61b305;
  border-color: transparent;
  border-radius: 5%; 
}

.prof-edit-profile button:hover ,.prof-create-post-button:hover{
  background-color: #539B04;
 
}
/**************************** STYLING FOR ABOUT + RADAR LIST***********************************/
 
.prof-about-content{ 
  background-color: #747474;
  min-height: 250px;
  max-height: 250px;  
  min-width: 250px ;
  max-width: 250px;      
  word-break:break-all;  
}

.prof-radar-list-content {
  background-color: #747474;
  min-height: 450px; 
  max-height: 450px; 
  display: flex;
  
}
.prof-radar-list-content button {
  align-self: flex-end;
  padding: 2px 10px;
  margin-left: 40px; 
  border-color: white; 
  border-style: solid; 
  background-color:  #747474;
  color: white;  
}
.prof-radar-list-content button:hover {
  border-color: white; 
  border-style: solid; 
  color:  #747474;
  background-color: white;  
}
/********************************** STYLING FOR INTEREST + PICKS ***********************************************************/

.prof-picks{
  padding-left: 2%;
}

.prof-interest-content {
  display: flex;
  justify-content: center;
  align-items: center;
}

.prof-interest-content, .prof-picks-content{
  background-color: #747474;
  min-height: 400px; 
  max-height: 400px; 
  min-width: 375px ; 
  max-width: 375px; 
  word-break:break-all; 
}

.prof-interest-content .imageselect-tile {
  display: table-cell;
  padding: 0;
  padding-left: 1px;
  padding-top: 1px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding: 7px;
}

.prof-interest-content .image-tile-selected {
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;

  width: 107px;
  height: 107px;

  border-radius: 5%;
  border: 1px solid black;

  background-color: lightskyblue;
}

.prof-interest-content .image-tile-unselected {
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;

  width: 107px;
  height: 107px;

  border-radius: 5%;
  border: 1px solid black;

  background-color: white;
}

.prof-interest-content .imageselect-image {
  max-height: px;
  max-width: 80px;
}




/*********************STYLES FOR ACS HISTORY*********************/
.prof-piechart {
  padding-left: 50px ; 
  padding-right: 100px ; 
  padding-top: 50px; 
  padding-bottom: 50px;
  height: 200px;
  width: 200px;
}
.prof-acs-content {
  background-color: #747474;
  color: white; 
  display: flex;
  max-width: 1100px;

}
.prof-acs-content td {
  padding: 10px; 
}
.prof-acs-content th {
  padding: 10px; 
}
.prof-score-content-pos { 
  color:#61b305;
} 
.prof-score-content-neg { 
  color: #B33838;
} 


@font-face {
  font-family: 'Commissioner';
  src: local('Commissioner'), url(../res/fonts/Commissioner/Commissioner-Medium.ttf) format('truetype');
}

